k8s/prod/middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: company-dns
spec:
  redirectScheme:
    scheme: https
    permanent: true
