k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: company-dns
  labels:
    app.kubernetes.io/name: company-dns
