k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-dns
  namespace: company-dns
  labels:
    app.kubernetes.io/name: company-dns
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: company-dns
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
